RESOLVED FIXED22104
Javascript URL percent encoding/decoding broken by some characters
https://bugs.webkit.org/show_bug.cgi?id=22104
Summary Javascript URL percent encoding/decoding broken by some characters
Alexey Proskuryakov
Reported 2008-11-06 10:04:15 PST
Steps to reproduce: 1) Open http://lleo.aha.ru/dnevnik/2008/10/13.html 2) Click on one of the blue asterisks in text (not the first one, though). Results: An alert appears. It contains many U+FFFD replacement characters. Works in Firefox. The code is: <a href='javascript:alert("<cyrillic letters>\n<more cyrillic letters>")'>*</a> Document charset is windows-1251.
Attachments
proposed fix (3.58 KB, patch)
2008-11-09 04:54 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2008-11-09 04:54:58 PST
Created attachment 24999 [details] proposed fix
Darin Adler
Comment 2 2008-11-09 07:21:07 PST
Comment on attachment 24999 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2008-11-09 11:09:03 PST
Committed revision 38243.
Note You need to log in before you can comment on or make changes to this bug.