        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=22104
        Javascript URL percent encoding/decoding broken by some characters

        Test: fast/loader/javascript-url-encoding-2.html

        * platform/KURL.cpp: (WebCore::encodeRelativeString): Don't try to break down javascript URLs.



Canonical link: https://commits.webkit.org/30461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38243 268f45cc-cd09-0410-ab3c-d52691b4dbfc